# modeling

./: .gitignore  CMakeLists.txt  README.md  remake-build-dbg.ps1  run_build_dbg.ps1  run_build_opt.ps1
src/minimesh/cli/: main.cpp
src/minimesh/core/: CMakeLists.txt
src/minimesh/core/mohe/: mesh_connectivity.cpp  mesh_connectivity.hpp  mesh_deform.cpp  mesh_deform.hpp  mesh_fixed_param.cpp  mesh_fixed_param.hpp  mesh_free_param.cpp  mesh_free_param.hpp  mesh_mapping.cpp  mesh_mapping.hpp  mesh_mapping_vertex_optimizer.hpp  mesh_modifier.cpp  mesh_modifier.hpp  mesh_simplify.cpp  mesh_simplify.hpp  mesh_simplify_history.hpp  mesh_subdivision.cpp  mesh_subdivision.hpp
src/minimesh/gui/: main.cpp
src/minimesh/viz/: mesh_viewer.cpp  mesh_viewer.hpp
